@@ -176,9 +176,11 @@ sl_def(run_benchmark, void, sl_glparm(struct benchmark*, b))
   }
   puts("# done.\n\n");
 
-  output_string("## measurements:\n", 2);
-  long report_flags = (format ? (REPORT_CSV|CSV_SEP(' ')) : REPORT_FIBRE) | REPORT_STREAM(2);
+  output_string("### begin benchmark results\n", 2);
+  long report_flags = (format ? (REPORT_CSV|CSV_SEP(' ')|CSV_INCLUDE_HEADER) \
+		       : REPORT_FIBRE) | REPORT_STREAM(2);
 
   mtperf_report_intervals(intervals, p, report_flags);
+  output_string("### end benchmark results\n", 2);
 }
 sl_enddef
